--- a/Main/chatbot.html
+++ b/Main/chatbot.html
@@ -5,6 +5,7 @@ Index.html -->
 <html lang="en">
 <head>
 	<meta charset="UTF-8">
+	<meta http-equiv="Cache-control" content="no-cache">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<title>GSL-Chatbot</title>
 	<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.1/dist/css/bootstrap.min.css" integrity="sha384-F3w7mX95PdgyTmZZMECAngseQB83DfGTowi0iMjiWaeVhAn4FJkqJByhZMI3AhiU" crossorigin="anonymous">
@@ -17,9 +18,37 @@ Index.html -->
 </head>
 
 <body>
+	<nav class="navbar navbar-expand-lg navbar-dark p-3" style="background-color: #8400ff;">
+		<a class="navbar-brand ml-3" href="#">GSL CHATBOT</a>
+		<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
+		  <span class="navbar-toggler-icon"></span>
+		</button>
+		<div class="collapse navbar-collapse" id="navbarNavAltMarkup">
+		  <div class="navbar-nav">
+			<a class="nav-item nav-link active" href="#">Home <span class="sr-only">(current)</span></a>
+			<a class="nav-item nav-link" href="#">Test</a>
+			<a class="nav-item nav-link" href="#">About Us</a>
+		  </div>
+		</div>
+	  </nav>
+	  <section class="hero-banner bg-light py-5" style="background-color:#8400ff;">
+		<div class="container">
+			<div class="row row align-items-center">
+				<div class="col-lg-5 offset-lg-1 order-lg-1 p">
+					<img src="img/bot-herobanner.png" class="img-fluid" alt="gslchatbot" height="500px" width="300px">
+				</div>
+				<div class="col-lg-6">
+					<h1 class="mt-3">GSL-Chatbot</h1>
+					<p class="lead text-secondary my-5">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
+					<a href="#" class="btn btn-outline-secondary btn-lg border">Test Now</a>
+				</div>
+			</div>
+		</div>
+	</section>
 
+	<!-- CHATBOT CODE -->
 	<div class="wrapper">
-        <div class="title">GSL Chatbot</div>
+        <div class="title">GSL Chatbot<button type="button" class="btn btn-primary btn-sm" id="btn_close" aria-label="Close">X</button></div>
         <div class="form">
             <div class="bot-inbox inbox" id="botmsg">
                 <div class="icon">
@@ -33,74 +62,15 @@ Index.html -->
         </div>
         <div class="typing-field">
             <div class="input-data">
-                <input id="data" type="text" placeholder="Type something here.." required>
+                <input id="data" type="text" placeholder="Type your message here.." required>
                 <button id="send-btn"><i class="fa fa-send" ></i></button>
             </div>
         </div>
     </div>
+	
 	<button class="btn btn-primary" id="chatbtn">
 		<i class="far fa-comment-dots"></i>
 	</button>
-		
-
-	</div>
-<!-- <div class="bot_window">
-	
-	<div class="ctrl_window">
-		<button type="button" class="close" id="closebtn" aria-label="Close">
-			<span aria-hidden="true">&times;</span>
-		</button>
-		<span id="chatwindow_title"><b>GSL Chatbot<b></span>
-	</div>
-	
-	<div class="chatBox">
-		<div class="container">
-			<div class="row">
-				<div class="col-sm">
-					<span>Text</span>
-				</div>
-				<div class="col-sm">
-					<div class="msgBox">
-					<p>Welcome to the official website of Goa Shipyard Limited.</p>
-					</div>
-				</div>
-			</div>
-			<br>
-		</div>
-		<div class="container">
-			<div class="row">
-				<div class="col-sm">
-					<span>Text</span>
-				</div>
-				<div class="col-sm">
-					<div class="msgBox">
-					<p>How can I help you today?</p>
-					</div>
-				</div>
-			</div>
-			<br>
-		</div>
-		<div class="container">
-			<div class="row">
-				<div class="col-sm">
-					<span>Text</span>
-				</div>
-				<div class="col-sm">
-					<div class="msgBox">
-					<p>Welcome to the official website of Goa Shipyard Limited.</p>
-					</div>
-				</div>
-			</div>
-			<br>
-		</div>
-			
-	</div>
-	<input class="form-control input_box" placeholder="Type your message here"type="text"> 
-	</input>
-	<button type="button" class="btn btn-primary btn-sm send_btn"><i class="fa fa-send" aria-hidden="true"></i></button>
-
-</div> -->
-
 
 </body>
 
