--- a/Main/chatbot.html
+++ b/Main/chatbot.html
@@ -18,7 +18,7 @@ Index.html -->
 </head>
 
 <body>
-	<nav class="navbar navbar-expand-lg navbar-dark p-3" style="background-color: #8400ff;">
+	<nav class="navbar navbar-expand-lg navbar-dark p-3" style="background-color: #14279B;">
 		<a class="navbar-brand ml-3" href="#">GSL CHATBOT</a>
 		<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
 		  <span class="navbar-toggler-icon"></span>
@@ -56,6 +56,14 @@ Index.html -->
                 </div>
                 <div class="msg-header">
                     <p>Hello there, how can I help you?</p>
+                </div>
+            </div>
+			<div class="bot-inbox inbox" id="opt_inbox">
+                <!-- <div class="icon">
+                    <i class="fas fa-user"></i>
+                </div> -->
+                <div class="options" id="contact">
+                    <p>Contact Details</p>
                 </div>
             </div>
 			
