--- a/Main/chatbot.html
+++ b/Main/chatbot.html
@@ -10,7 +10,8 @@ Index.html -->
 	<title>GSL-Chatbot</title>
 	<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.1/dist/css/bootstrap.min.css" integrity="sha384-F3w7mX95PdgyTmZZMECAngseQB83DfGTowi0iMjiWaeVhAn4FJkqJByhZMI3AhiU" crossorigin="anonymous">
 	<link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet">
-	<link href="src/style.css" type="text/css" rel="stylesheet">
+	<link href="src/websitestyle.css" type="text/css" rel="stylesheet">
+	<link href="src/chatbotstyle.css" type="text/css" rel="stylesheet">
 	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css"/>
 	<script src="http://ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.min.js"></script>
 	<script src="src/script.js"></script>
@@ -19,7 +20,7 @@ Index.html -->
 
 <body>
 	<nav class="navbar navbar-expand-lg navbar-dark p-3" style="background-color: #14279B;">
-		<a class="navbar-brand ml-3" href="#">GSL CHATBOT</a>
+		<a class="navbar-brand ml-3" href="#"><img src="img/gsl-logo-light.png" class="img-fluid" alt="gslchatbot" height="40px" width="40px"></a>
 		<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
 		  <span class="navbar-toggler-icon"></span>
 		</button>
@@ -31,14 +32,14 @@ Index.html -->
 		  </div>
 		</div>
 	  </nav>
-	  <section class="hero-banner bg-light py-5" style="background-color:#8400ff;">
+	  <section class="hero-banner bg-light py-5" >
 		<div class="container">
 			<div class="row row align-items-center">
 				<div class="col-lg-5 offset-lg-1 order-lg-1 p">
-					<img src="img/bot-herobanner.png" class="img-fluid" alt="gslchatbot" height="500px" width="300px">
+					<img src="img/gsl-logo.png" class="img-fluid" alt="gslchatbot" height="500px" width="300px">
 				</div>
 				<div class="col-lg-6">
-					<h1 class="mt-3">GSL-Chatbot</h1>
+					<h1 class="mt-3" style="color: #14279B; ">GSL-Chatbot</h1>
 					<p class="lead text-secondary my-5">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
 					<a href="#" class="btn btn-outline-secondary btn-lg border">Test Now</a>
 				</div>
@@ -50,22 +51,22 @@ Index.html -->
 	<div class="wrapper">
         <div class="title">GSL Chatbot<button type="button" class="btn btn-primary btn-sm" id="btn_close" aria-label="Close">X</button></div>
         <div class="form">
-            <div class="bot-inbox inbox" id="botmsg">
-                <div class="icon">
-                    <i class="fas fa-user"></i>
-                </div>
-                <div class="msg-header">
-                    <p>Hello there, how can I help you?</p>
-                </div>
-            </div>
-			<div class="bot-inbox inbox" id="opt_inbox">
-                <!-- <div class="icon">
-                    <i class="fas fa-user"></i>
-                </div> -->
+			<div class="loader"></div>
+            	<div class="bot-inbox inbox" id="botmsg" >
+					<div class="icon">
+						<i class="fas fa-robot"></i>
+					</div>
+					<div class="msg-header">
+						<p>Hello there, how can I help you?</p>
+					</div>
+			</div>
+
+			<!-- Choices -->
+			<!-- <div class="bot-inbox inbox" id="opt_inbox">
                 <div class="options" id="contact">
                     <p>Contact Details</p>
                 </div>
-            </div>
+            </div> -->
 			
         </div>
         <div class="typing-field">
@@ -80,6 +81,151 @@ Index.html -->
 		<i class="far fa-comment-dots"></i>
 	</button>
 
+
+	<!-- FOOTER -->
+	<!-- Footer -->
+<footer class="page-footer font-small unique-color-dark">
+
+	<div style="background-color: #E6E6E6">
+	  <div class="container">
+  
+		<!-- Grid row-->
+		<div class="row py-4 d-flex align-items-center">
+  
+		  <!-- Grid column -->
+		  <div class="col-md-6 col-lg-5 text-center text-md-left mb-4 mb-md-0">
+			<h6 class="mb-0">Get connected with us on social networks!</h6>
+		  </div>
+		  <!-- Grid column -->
+  
+		  <!-- Grid column -->
+		  <div class="col-md-6 col-lg-7 text-center text-md-right">
+  
+			<!-- Facebook -->
+			<a class="fb-ic">
+			  <i class="fab fa-facebook-f white-text mr-4"> </i>
+			</a>
+			<!-- Twitter -->
+			<a class="tw-ic">
+			  <i class="fab fa-twitter white-text mr-4"> </i>
+			</a>
+			<!-- Google +-->
+			<a class="gplus-ic">
+			  <i class="fab fa-google-plus-g white-text mr-4"> </i>
+			</a>
+			<!--Linkedin -->
+			<a class="li-ic">
+			  <i class="fab fa-linkedin-in white-text mr-4"> </i>
+			</a>
+			<!--Instagram-->
+			<a class="ins-ic">
+			  <i class="fab fa-instagram white-text"> </i>
+			</a>
+  
+		  </div>
+		  <!-- Grid column -->
+  
+		</div>
+		<!-- Grid row-->
+  
+	  </div>
+	</div>
+  
+	<!-- Footer Links -->
+	<div class="container text-center text-md-left mt-5">
+  
+	  <!-- Grid row -->
+	  <div class="row mt-3">
+  
+		<!-- Grid column -->
+		<div class="col-md-3 col-lg-4 col-xl-3 mx-auto mb-4">
+  
+		  <!-- Content -->
+		  <h6 class="text-uppercase font-weight-bold">Company name</h6>
+		  <hr class="deep-purple accent-2 mb-4 mt-0 d-inline-block mx-auto" style="width: 60px;">
+		  <p>Here you can use rows and columns to organize your footer content. Lorem ipsum dolor sit amet,
+			consectetur
+			adipisicing elit.</p>
+  
+		</div>
+		<!-- Grid column -->
+  
+		<!-- Grid column -->
+		<div class="col-md-2 col-lg-2 col-xl-2 mx-auto mb-4">
+  
+		  <!-- Links -->
+		  <h6 class="text-uppercase font-weight-bold">Products</h6>
+		  <hr class="deep-purple accent-2 mb-4 mt-0 d-inline-block mx-auto" style="width: 60px;">
+		  <p>
+			<a href="#!">MDBootstrap</a>
+		  </p>
+		  <p>
+			<a href="#!">MDWordPress</a>
+		  </p>
+		  <p>
+			<a href="#!">BrandFlow</a>
+		  </p>
+		  <p>
+			<a href="#!">Bootstrap Angular</a>
+		  </p>
+  
+		</div>
+		<!-- Grid column -->
+  
+		<!-- Grid column -->
+		<div class="col-md-3 col-lg-2 col-xl-2 mx-auto mb-4">
+  
+		  <!-- Links -->
+		  <h6 class="text-uppercase font-weight-bold">Useful links</h6>
+		  <hr class="deep-purple accent-2 mb-4 mt-0 d-inline-block mx-auto" style="width: 60px;">
+		  <p>
+			<a href="#!">Your Account</a>
+		  </p>
+		  <p>
+			<a href="#!">Become an Affiliate</a>
+		  </p>
+		  <p>
+			<a href="#!">Shipping Rates</a>
+		  </p>
+		  <p>
+			<a href="#!">Help</a>
+		  </p>
+  
+		</div>
+		<!-- Grid column -->
+  
+		<!-- Grid column -->
+		<div class="col-md-4 col-lg-3 col-xl-3 mx-auto mb-md-0 mb-4">
+  
+		  <!-- Links -->
+		  <h6 class="text-uppercase font-weight-bold">Contact</h6>
+		  <hr class="deep-purple accent-2 mb-4 mt-0 d-inline-block mx-auto" style="width: 60px;">
+		  <p>
+			<i class="fas fa-home mr-3"></i> New York, NY 10012, US</p>
+		  <p>
+			<i class="fas fa-envelope mr-3"></i> info@example.com</p>
+		  <p>
+			<i class="fas fa-phone mr-3"></i> + 01 234 567 88</p>
+		  <p>
+			<i class="fas fa-print mr-3"></i> + 01 234 567 89</p>
+  
+		</div>
+		<!-- Grid column -->
+  
+	  </div>
+	  <!-- Grid row -->
+  
+	</div>
+	<!-- Footer Links -->
+  
+	<!-- Copyright -->
+	<div class="footer-copyright text-center py-3">© 2020 Copyright:
+	  <a href="https://mdbootstrap.com/"> MDBootstrap.com</a>
+	</div>
+	<!-- Copyright -->
+  
+  </footer>
+  <!-- Footer -->
 </body>
 
 
