--- a/Main/chatbot.html
+++ b/Main/chatbot.html
@@ -59,14 +59,18 @@ Index.html -->
 					<div class="msg-header">
 						<p>Hello there, how can I help you?</p>
 					</div>
+					<!-- <div class="timestamp">
+					<p id="msg_time">0:00</p>
+					</div> -->
+
 			</div>
 
 			<!-- Choices -->
-			<!-- <div class="bot-inbox inbox" id="opt_inbox">
+			<div class="bot-inbox inbox" id="opt_inbox">
                 <div class="options" id="contact">
-                    <p>Contact Details</p>
+                    <p><b>Contact Details</b></p>
                 </div>
-            </div> -->
+            </div>
 			
         </div>
         <div class="typing-field">
@@ -132,7 +136,7 @@ Index.html -->
 	</div>
   
 	<!-- Footer Links -->
-	<div class="container text-center text-md-left mt-5">
+	<div class="container text-center text-md-left mt-5"  style="color: #707070;" >
   
 	  <!-- Grid row -->
 	  <div class="row mt-3">
@@ -141,11 +145,10 @@ Index.html -->
 		<div class="col-md-3 col-lg-4 col-xl-3 mx-auto mb-4">
   
 		  <!-- Content -->
-		  <h6 class="text-uppercase font-weight-bold">Company name</h6>
-		  <hr class="deep-purple accent-2 mb-4 mt-0 d-inline-block mx-auto" style="width: 60px;">
-		  <p>Here you can use rows and columns to organize your footer content. Lorem ipsum dolor sit amet,
-			consectetur
-			adipisicing elit.</p>
+		  <h6 class="text-uppercase font-weight-bold">Goa Shipyard Limited</h6>
+		  <hr class="accent-2 mb-4 mt-0 d-inline-block mx-auto" style="width: 60px;">
+		  <p>As a Defence Public Sector Undertaking, Goa Shipyard Limited has played a significant role in the specialized field of shipbuilding, contributing in no small measure towards meeting the requirements..
+		</p>
   
 		</div>
 		<!-- Grid column -->
@@ -154,60 +157,39 @@ Index.html -->
 		<div class="col-md-2 col-lg-2 col-xl-2 mx-auto mb-4">
   
 		  <!-- Links -->
-		  <h6 class="text-uppercase font-weight-bold">Products</h6>
+		  <h6 class="text-uppercase font-weight-bold">Services</h6>
 		  <hr class="deep-purple accent-2 mb-4 mt-0 d-inline-block mx-auto" style="width: 60px;">
 		  <p>
-			<a href="#!">MDBootstrap</a>
+			<a href="#!">Training</a>
 		  </p>
 		  <p>
-			<a href="#!">MDWordPress</a>
+			<a href="#!">Ship Repair/ Ship Refit</a>
 		  </p>
 		  <p>
-			<a href="#!">BrandFlow</a>
+			<a href="#!">Ship Moderations / Ship Conversion</a>
 		  </p>
 		  <p>
-			<a href="#!">Bootstrap Angular</a>
+			<a href="#!">GES ( General Engineering Services</a>
 		  </p>
   
 		</div>
 		<!-- Grid column -->
   
-		<!-- Grid column -->
-		<div class="col-md-3 col-lg-2 col-xl-2 mx-auto mb-4">
-  
-		  <!-- Links -->
-		  <h6 class="text-uppercase font-weight-bold">Useful links</h6>
-		  <hr class="deep-purple accent-2 mb-4 mt-0 d-inline-block mx-auto" style="width: 60px;">
-		  <p>
-			<a href="#!">Your Account</a>
-		  </p>
-		  <p>
-			<a href="#!">Become an Affiliate</a>
-		  </p>
-		  <p>
-			<a href="#!">Shipping Rates</a>
-		  </p>
-		  <p>
-			<a href="#!">Help</a>
-		  </p>
-  
-		</div>
-		<!-- Grid column -->
   
 		<!-- Grid column -->
 		<div class="col-md-4 col-lg-3 col-xl-3 mx-auto mb-md-0 mb-4">
   
 		  <!-- Links -->
-		  <h6 class="text-uppercase font-weight-bold">Contact</h6>
-		  <hr class="deep-purple accent-2 mb-4 mt-0 d-inline-block mx-auto" style="width: 60px;">
+		  <h6 class="text-uppercase font-weight-bold"> Contact</h6>
+		  <!-- <hr class="deep-purple accent-2 mb-4 mt-0 d-inline-block mx-auto" style="width: 60px;"> -->
 		  <p>
-			<i class="fas fa-home mr-3"></i> New York, NY 10012, US</p>
+			<i class="fas fa-home mr-3"></i> Vaddem House, Vasco-Da-Gama, Goa</p>
 		  <p>
-			<i class="fas fa-envelope mr-3"></i> info@example.com</p>
+			<i class="fas fa-envelope mr-3"></i> contactus@goashipyard.com</p>
 		  <p>
-			<i class="fas fa-phone mr-3"></i> + 01 234 567 88</p>
+			<i class="fas fa-phone mr-3"></i> +91-832-2512152( 5 LINES) / 2513954/2512359</p>
 		  <p>
-			<i class="fas fa-print mr-3"></i> + 01 234 567 89</p>
+			<i class="fas fa-print mr-3"></i> +91-832-2513870 / 2513943 / 2513260/2512149</p>
   
 		</div>
 		<!-- Grid column -->
@@ -219,9 +201,9 @@ Index.html -->
 	<!-- Footer Links -->
   
 	<!-- Copyright -->
-	<div class="footer-copyright text-center py-3">© 2020 Copyright:
-	  <a href="https://mdbootstrap.com/"> MDBootstrap.com</a>
-	</div>
+	<!-- <div class="footer-copyright text-center py-3">© 2020 Copyright:
+	  
+	</div> -->
 	<!-- Copyright -->
   
   </footer>
