--- a/Main/chatbot.html
+++ b/Main/chatbot.html
@@ -67,8 +67,11 @@ Index.html -->
 
 			<!-- Choices -->
 			<div class="bot-inbox inbox" id="opt_inbox">
-                <div class="options" id="contact">
+                <div class="options m-2" id="contact">
                     <p><b>Contact Details</b></p>
+                </div>
+				<div class="options m-2" id="info">
+                    <p><b>Info</b></p>
                 </div>
             </div>
 			
