--- a/Main/chatbot.html
+++ b/Main/chatbot.html
@@ -19,6 +19,83 @@ Index.html -->
 </head>
 
 <body>
+<!-- CHATBOT CODE -->
+<div class="wrapper">
+	<div class="title">
+		<div class="container controls">
+			<div class="row">
+				<div class="col-6"><span>GSL Chatbot</span></div>
+				<div class="col-sm"><button type="button" class="btn btn-primary btn-sm controlBtns" aria-label="Minimize" id="minbtn"><img src="img/minimize-ico.png" width="24" height="24"/></button></div>
+				<div class="col-sm">
+					<button type="button" class="btn btn-primary btn-sm controlBtns" id="maxbtn" aria-label="Maximize"><img src="img/fullsceen-ico.png" width="24" height="24"/></button>
+				</div>
+				<div class="col-sm"><button type="button" class="btn btn-primary btn-sm controlBtns" id="btn_close" aria-label="Close"><i class="fa fa-times"></i></button></div>
+				
+			</div>
+		</div>
+	</div>
+	
+		
+	<div class="form">
+		<div class="loader"></div>
+			<div class="bot-inbox inbox" id="botmsg" >
+				<div class="icon">
+					<i class="fas fa-robot"></i>
+				</div>
+				<div class="msg-header">
+					<p id="greet">How can i help you?</p>
+				</div>
+				<!-- <div class="timestamp">
+				<p id="msg_time">0:00</p>
+				</div> -->
+
+		</div>
+
+		<!-- Choices -->
+		<div class="bot-inbox inbox opt_inbox" >
+			<div class="icon" style="visibility: hidden;">
+				<i class="fas fa-robot"></i>
+			</div>
+			<div class="options m-2" id="contact">
+				<p><b>Contact Details</b></p>
+			</div>
+			<div class="options m-2" id="info">
+				<p><b>Info</b></p>
+			</div><br>
+		</div>
+		<div class="bot-inbox inbox opt_inbox" >
+			<div class="icon" style="visibility: hidden;">
+				<i class="fas fa-robot"></i>
+			</div>
+			<div class="options m-2" id="location">
+				<p><b>Location</b></p>
+			</div>
+			
+		</div>
+		
+	</div>
+	<div class="typing-field">
+		<div class="input-data">
+			<input id="data" type="text" placeholder="Type your message here.." required>
+			<button id="send-btn"><i class="fa fa-send" ></i></button>
+		</div>
+	</div>
+</div>
+
+<button class="btn btn-primary" id="chatbtn">
+	<i class="far fa-comment-dots"></i>
+</button>
+
+
+
+
+
+
+
+
+
+
+
 	<nav class="navbar navbar-expand-lg navbar-dark p-3" style="background-color: #14279B;">
 		<a class="navbar-brand ml-3" href="#"><img src="img/gsl-logo-light.png" class="img-fluid" alt="gslchatbot" height="40px" width="40px"></a>
 		<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
@@ -41,52 +118,21 @@ Index.html -->
 				<div class="col-lg-6">
 					<h1 class="mt-3" style="color: #14279B; ">GSL-Chatbot</h1>
 					<p class="lead text-secondary my-5">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
-					<a href="#" class="btn btn-outline-secondary btn-lg border">Test Now</a>
+					<a href="#" class="btn btn-outline-secondary btn-lg border" style="z-index: 0;">Test Now</a>
+					
 				</div>
 			</div>
 		</div>
 	</section>
 
-	<!-- CHATBOT CODE -->
-	<div class="wrapper">
-        <div class="title">GSL Chatbot<button type="button" class="btn btn-primary btn-sm" id="btn_close" aria-label="Close">X</button></div>
-        <div class="form">
-			<div class="loader"></div>
-            	<div class="bot-inbox inbox" id="botmsg" >
-					<div class="icon">
-						<i class="fas fa-robot"></i>
-					</div>
-					<div class="msg-header">
-						<p>Hello there, how can I help you?</p>
-					</div>
-					<!-- <div class="timestamp">
-					<p id="msg_time">0:00</p>
-					</div> -->
 
-			</div>
 
-			<!-- Choices -->
-			<div class="bot-inbox inbox" id="opt_inbox">
-                <div class="options m-2" id="contact">
-                    <p><b>Contact Details</b></p>
-                </div>
-				<div class="options m-2" id="info">
-                    <p><b>Info</b></p>
-                </div>
-            </div>
-			
-        </div>
-        <div class="typing-field">
-            <div class="input-data">
-                <input id="data" type="text" placeholder="Type your message here.." required>
-                <button id="send-btn"><i class="fa fa-send" ></i></button>
-            </div>
-        </div>
-    </div>
+
 	
-	<button class="btn btn-primary" id="chatbtn">
-		<i class="far fa-comment-dots"></i>
-	</button>
+
+
+
+
 
 
 	<!-- FOOTER -->
