--- a/Main/chatbot.html
+++ b/Main/chatbot.html
@@ -9,6 +9,7 @@ Index.html -->
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<title>GSL-Chatbot</title>
 	<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.1/dist/css/bootstrap.min.css" integrity="sha384-F3w7mX95PdgyTmZZMECAngseQB83DfGTowi0iMjiWaeVhAn4FJkqJByhZMI3AhiU" crossorigin="anonymous">
+	
 	<link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet">
 	<link href="src/websitestyle.css" type="text/css" rel="stylesheet">
 	<link href="src/chatbotstyle.css" type="text/css" rel="stylesheet">
@@ -19,14 +20,38 @@ Index.html -->
 </head>
 
 <body>
+
+<!-- // Message Notification Sound -->
+<!-- 
+<audio id="msg_notif" autoplay="true"><source src="sound/msgsound.mp3" type="audio/mpeg"></audio> -->
+
+
+<!-- //////////////////// -->
+
+<!-- TRANSLATING CODE  -->
+<!-- <script type="text/javascript">// <![CDATA[
+function googleTranslateElementInit() {
+new google.translate.TranslateElement({pageLanguage: 'en', includedLanguages: 'en,hi',layout: google.translate.TranslateElement.InlineLayout.SIMPLE}, 'google_translate_element');
+}
+// ]]></script>
+<script src="//translate.google.com/translate_a/element.js?cb=googleTranslateElementInit" type="text/javascript"></script> -->
+
+<!-- //////////////////// -->
+
+
+
 <!-- CHATBOT CODE -->
-<audio id="msg_notif" src="sound/msgsound.mp3" preload="auto" ></audio> // Message Notification Sound
 <div class="wrapper">
 	<div class="title">
 		<div class="container controls">
 			<div class="row">
-				<div class="col-8">
+				<div class="col-6">
 					<img class="" src="img/botonlineimg.png" width="127" height="46">
+				</div>
+				<!-- <div class="col"><div id="google_translate_element"></div></div> -->
+				<div class="col">
+					<button type="button" class="btn btn-primary btn-sm controlBtns" aria-label="collapse" id="collapseBtn" style="visibility: visible;" ><i class="fa fa-minus" style="font-size: 8pt;"></i></button>
+					<button type="button" class="btn btn-primary btn-sm controlBtns" aria-label="Restore" id="restore_collapseBtn" style="visibility:hidden;" ><i class="fa fa-plus" style="font-size: 8pt;"></i></button>
 				</div>
 				<div class="col">
 					<button type="button" class="btn btn-primary btn-sm controlBtns" aria-label="Minimize" id="minbtn"><img src="img/minimize-ico.png" width="24" height="24"/></button>
@@ -60,10 +85,10 @@ Index.html -->
 			<div class="icon" style="visibility: hidden;">
 				<i class="fas fa-robot"></i>
 			</div>
-			<div class="options m-2" id="contact">
+			<div class="options" id="contact">
 				<p><b>Contact Details</b></p>
 			</div>
-			<div class="options m-2" id="info">
+			<div class="options" id="info">
 				<p><b>Info</b></p>
 			</div><br>
 		</div>
@@ -71,10 +96,10 @@ Index.html -->
 			<div class="icon" style="visibility: hidden;">
 				<i class="fas fa-robot"></i>
 			</div>
-			<div class="options m-2" id="location">
+			<div class="options" id="location">
 				<p><b>Location</b></p>
 			</div>
-			<div class="options m-2" id="query">
+			<div class="options" id="query">
 				<p><b>Other Queries</b></p>
 			</div>
 			
@@ -83,27 +108,18 @@ Index.html -->
 	</div>
 	<div class="typing-field">
 		<div class="input-data">
-			<input id="data" type="text" autocomplete="off" placeholder="Type your message here.." required>
+			<input id="data" type="text" autocomplete="off" placeholder="Reply to GSLBot.." required>
 			<button id="send-btn"><i class="fa fa-send" ></i></button>
 		</div>
 	</div>
 </div>
 
-<button class="btn btn-primary" id="chatbtn">
+<button class="btn btn-primary rounded-circle" id="chatbtn">
 	<i class="far fa-comment-dots"></i>
 </button>
 
 
-
-
-
-
-
-
-
-
-
-	<nav class="navbar navbar-expand-lg navbar-dark p-3" style="background-color: #14279B;">
+	<nav class="navbar navbar-expand-lg navbar-dark p-3" style="background-color: #14279B;" translate="no">
 		<a class="navbar-brand ml-3" href="#"><img src="img/gsl-logo-light.png" class="img-fluid" alt="gslchatbot" height="40px" width="40px"></a>
 		<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
 		  <span class="navbar-toggler-icon"></span>
@@ -116,7 +132,7 @@ Index.html -->
 		  </div>
 		</div>
 	  </nav>
-	  <section class="hero-banner bg-light py-5" >
+	  <section class="hero-banner bg-light py-5" translate="no">
 		<div class="container">
 			<div class="row row align-items-center">
 				<div class="col-lg-5 offset-lg-1 order-lg-1 d-flex justify-content-center" style="align-items: flex-end;">
@@ -146,7 +162,7 @@ Index.html -->
 
 	<!-- FOOTER -->
 	<!-- Footer -->
-<footer class="page-footer font-small unique-color-dark">
+<footer class="page-footer font-small unique-color-dark " translate="no">
 
 	<div style="background-color: #E6E6E6">
 	  <div class="container">
