--- a/Main/chatbot.html
+++ b/Main/chatbot.html
@@ -8,6 +8,7 @@ Index.html -->
 	<meta http-equiv="Cache-control" content="no-cache">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<title>GSL-Chatbot</title>
+	<link rel="icon" type="image/png" href="img/gsl-logo.png" sizes="32x32">
 	<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.1/dist/css/bootstrap.min.css" integrity="sha384-F3w7mX95PdgyTmZZMECAngseQB83DfGTowi0iMjiWaeVhAn4FJkqJByhZMI3AhiU" crossorigin="anonymous">
 	
 	<link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet">
