--- a/Main/chatbot.html
+++ b/Main/chatbot.html
@@ -71,13 +71,16 @@ new google.translate.TranslateElement({pageLanguage: 'en', includedLanguages: 'e
 			<div class="bot-inbox inbox" id="botmsg" >
 				<div class="icon">
 					<img src="img/bot.png" width="24" height="24">
+					
 					<!-- <i class="fas fa-robot"></i> -->
 				</div>
 				<div class="msg-header">
+					<span>GslBot</span>
 					<p id="greet">How can i help you?</p>
 				</div>
 				<div class="timestamps">
-				<p class="msg_time">0:00</p>
+					<br><br>
+					<p class="msg_time">0:00</p>
 				</div>
 			</div>
 
