--- a/Main/chatbot.html
+++ b/Main/chatbot.html
@@ -23,8 +23,8 @@ Index.html -->
 <body>
 
 <!-- // Message Notification Sound -->
-<!-- 
-<audio id="msg_notif" autoplay="true"><source src="sound/msgsound.mp3" type="audio/mpeg"></audio> -->
+ 
+<!-- <audio id="msg_notif" autoplay="true" muted><source src="sound/msgsound.mp3" type="audio/mpeg"></audio>  -->
 
 
 <!-- //////////////////// -->
@@ -118,7 +118,7 @@ new google.translate.TranslateElement({pageLanguage: 'en', includedLanguages: 'e
 				<p><b>Other Queries</b></p>
 			</div>
 			<div class="options" id="contactUs">
-				<p><b>ContactUs</b></p>
+				<p><b>Contact Us</b></p>
 			</div>
 			
 		</div>
