Added Offline Dependencies + Project Report

--- a/Main/chatbot.html
+++ b/Main/chatbot.html
@@ -9,16 +9,22 @@ Index.html -->
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<title>GSL-Chatbot</title>
 	<link rel="icon" type="image/png" href="img/gsl-logo.png" sizes="32x32">
-	<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.1/dist/css/bootstrap.min.css" integrity="sha384-F3w7mX95PdgyTmZZMECAngseQB83DfGTowi0iMjiWaeVhAn4FJkqJByhZMI3AhiU" crossorigin="anonymous">
-	
+	<!-- <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.1/dist/css/bootstrap.min.css" integrity="sha384-F3w7mX95PdgyTmZZMECAngseQB83DfGTowi0iMjiWaeVhAn4FJkqJByhZMI3AhiU" crossorigin="anonymous">
 	<link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet">
 	<link href="src/websitestyle.css" type="text/css" rel="stylesheet">
 	<link href="src/chatbotstyle.css" type="text/css" rel="stylesheet">
 	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css"/>
 	<script src="http://ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.min.js"></script>
-	<script src="src/script.js"></script>
+	<script src="src/script.js"></script> -->
 	
-</head>
+ <!-- ----------- OFFLINE LINKING ----  -->
+	<link rel="stylesheet" href="src/bootstrap.min.css">
+	<link rel="stylesheet" href="src/all.css"/>
+	<link href="src/websitestyle.css" type="text/css" rel="stylesheet">
+	<link href="src/chatbotstyle.css" type="text/css" rel="stylesheet">
+	<script src="src/jquery.min.js"></script>
+	<script src="src/script.js"></script>
+</head>W
 
 <body>
 
@@ -127,7 +133,7 @@ new google.translate.TranslateElement({pageLanguage: 'en', includedLanguages: 'e
 	<div class="typing-field">
 		<div class="input-data">
 			<input id="data" type="text" autocomplete="off" placeholder="Reply to GSLBot.." required>
-			<button id="send-btn"><i class="fa fa-send" ></i></button>
+			<button id="send-btn"><i class="fa fa-paper-plane" ></i></button>
 		</div>
 	</div>
 </div>
